@@ -5,7 +5,7 @@ Imports: IRanges
 LinkingTo: Rsamtools, zlibbioc
 Title: Transcript expression inference and differential expression
         analysis for RNA-seq data
-Version: 1.1.3
+Version: 1.1.4
 Date: 2012-09-25
 Author: Peter Glaus, Antti Honkela and Magnus Rattray
 Maintainer: Peter Glaus <glaus@cs.man.ac.uk>
