@@ -4,7 +4,7 @@
 #  args.addOptionD("l","lambda0","lambda0",0,"Parameter lambda_0.",LAMBDA_0);
 #  args.addOptionD("c","confidencePerc","cf",0,"Percentage for confidence intervals.", 5);
 
-estimateDE <- function( cond1, cond2, outFile, parFile, lambda0=NULL, samples=NULL, confidencePerc=NULL, verbose=NULL, pretend=FALSE ){
+estimateDE <- function( cond1, cond2, outFile, parFile, lambda0=NULL, samples=NULL, confidencePerc=NULL, verbose=NULL, norm=NULL, pretend=FALSE ){
    
    args <- c('estimateDE',cond1,'C',cond2, '--outPrefix', outFile , '--parameters', parFile)
    if (!is.null(lambda0)) {
@@ -19,6 +19,12 @@ estimateDE <- function( cond1, cond2, outFile, parFile, lambda0=NULL, samples=NU
    
    if (!is.null(verbose) && (verbose)) {
       args <- c(args, '--verbose')
+   }
+   if (!is.null(norm)) {
+      if(length(cond1)+length(cond2) != length(norm)){
+         stop("The number of normalization constants has to match the number of sample files.");
+      }
+      args <- c(args, '--norm', paste(norm, collapse=","));
    }
 
    if(pretend){
