@@ -4,6 +4,8 @@ Package: BitSeq
 Version: 1.2.0 (25.9.2012)
 - new internal structure (not visible to user)
 - estimateExpression has a new convergence criterion which should result in producing fewer samples (faster)
+- library normalization option for getDE, estimateDE, estimateHyperPar, getMeanVariance
+  (in form of providing the normalization constants, for getting the constants please use edgeR or similar)
 
 Version: 1.0.1 (30.4.2012)
 Version: 1.1.1 (30.4.2012)
